--- a/css/main/search.css
+++ b/css/main/search.css
@@ -1,17 +1,16 @@
 .search {
   margin-top: 60px;
   display: flex;
-  width: 100%;
+  width: calc(100% - 52px);
 } 
 
 .field {
-  height: 47px;
-  border: none;
-  box-sizing: border-box;
-  background-color: #f4f7f6;
-  padding: 0px 18px;
-  width: 222px;
-  font-size: 13px;
+  width: 100%;
+ height: 47px;
+font-size: 13px;
+border: none;
+background-color: #f4f7f6;
+ padding-left: 19px;
 }
 
 .field:focus {
@@ -20,7 +19,10 @@
 }
 
 .hidden{
-  display: none;
+  width: 1px;
+  height: 1px;
+  clip: rect(1px, 1px, 1px, 1px);
+  position: absolute;
 }
 
 .search_button {
